--- a/domains/templates/domains.html
+++ b/domains/templates/domains.html
@@ -1,4 +1,3 @@
-<!-- domains.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -30,7 +29,7 @@
                            <th rowspan="2">CDN status</th>
                            <th rowspan="2">Google</th>
                            <th rowspan="2">Yandex</th>
-                           <th colspan="4" class="text-center">Block Details</th>
+                           <th colspan="4">Block Details</th>
                        </tr>
                        <tr>
                            <th>CDN</th>
@@ -47,14 +46,26 @@
        </div>
    </main>
 
-   <!-- Модальное окно для подтверждения действий -->
-   <div id="confirmModal" class="modal">
+   <!-- Модальное окно для подтверждения синхронизации -->
+   <div id="syncModal" class="modal">
        <div class="modal-content">
-           <h2 id="confirmModalTitle">Подтверждение</h2>
-           <p id="confirmModalMessage">Вы уверены, что хотите выполнить это действие?</p>
+           <h2>Подтвердите синхронизацию</h2>
+           <p>Вы уверены, что хотите синхронизировать домен <span id="syncModalDomainName"></span>?</p>
            <div class="form-actions">
-               <button type="button" id="confirmYesBtn" class="btn btn-primary">Да</button>
-               <button type="button" id="confirmNoBtn" class="btn">Нет</button>
+               <button type="button" id="confirmSyncBtn" class="btn btn-primary">Подтвердить</button>
+               <button type="button" id="cancelSyncBtn" class="btn">Отмена</button>
+           </div>
+       </div>
+   </div>
+
+   <!-- Модальное окно для подтверждения редиректа -->
+   <div id="redirectModal" class="modal">
+       <div class="modal-content">
+           <h2 id="redirectModalTitle">Подтвердите действие</h2>
+           <p>Вы уверены, что хотите выполнить это действие для домена <span id="redirectModalDomainName"></span>?</p>
+           <div class="form-actions">
+               <button type="button" id="confirmRedirectBtn" class="btn btn-primary">Подтвердить</button>
+               <button type="button" id="cancelRedirectBtn" class="btn">Отмена</button>
            </div>
        </div>
    </div>
