--- a/domains/templates/users.html
+++ b/domains/templates/users.html
@@ -65,9 +65,9 @@
             </select>
 
             <!-- Чекбокс для смены пароля -->
-            <div id="changePasswordBlock" class="hidden">
-                <input type="checkbox" id="changePasswordCheckbox">
-                <label for="changePasswordCheckbox">Сменить пароль</label>
+            <div id="changePasswordBlock" class="hidden form-check">
+                <input type="checkbox" id="changePasswordCheckbox" class="form-check-input">
+                <label for="changePasswordCheckbox" class="form-check-label">Сменить пароль</label>
                 <input type="password" id="newPassword" class="hidden">
             </div>
 
