--- a/domains/css/style.css
+++ b/domains/css/style.css
@@ -564,16 +564,15 @@ select:focus {
 /* ======= PAGE USERS STYLES ======= */
 .form-check {
     display: flex;
-    align-items: center;
-    gap: 8px; /* Расстояние между чекбоксом и текстом */
 }
 
 .form-check-input {
-    appearance: none; /* Убираем стандартный чекбокс */
+    position: absolute;
+    appearance: none; 
     width: 0;
     height: 0;
     margin: 0;
-    visibility: hidden; /* Делаем его полностью невидимым */
+    visibility: hidden;
 }
 
 .form-check-label {
