--- a/domains/templates/users.html
+++ b/domains/templates/users.html
@@ -64,6 +64,12 @@
                 <option value="editor" data-role="editor">Editor</option>
             </select>
 
+            <label for="userStatus">Активен:</label>
+            <select id="userStatus" class="form-control">
+                <option value="true" data-active="true">Да</option>
+                <option value="false" data-active="false">Нет</option>
+            </select>
+
             <!-- Чекбокс для смены пароля -->
             <div id="changePasswordBlock" class="hidden form-check">
                 <input type="checkbox" id="changePasswordCheckbox" class="form-check-input">
